# fides-ref

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
demo/: __init__.py  basic_flow.py
src/: __init__.py  hash_chain.py  ledger.py  payment_ledger.py  records.py  signatures.py  timestamps.py  verify.py
tests/: __init__.py  conftest.py  test_hash_chain.py  test_records.py  test_signatures.py  test_verify.py
